--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "resetdb": "npm run rollback && npm run migrate && npm run seed"
+    "resetdb": "npm run rollback && npm run migrate && npm run seed",
+    "cleanup": "knex seed:run --specific=00-cleanup.js"
   },
   "repository": {
     "type": "git",
